@@ -7,3 +7,5 @@ TODO
 * Allow to remove any chromosomes, or instead specify which chromosomes to keep.
 * Move barcode sequence option to pat_files.
 * The 'unmapped'reads in SAM filter step are actually not mapped to chr1-22,X,Y.
+
+* Implement global radiality centrality.
